test/files/pos/extra-predef/C_2.scala
object Test {
  val a: INT = 1234
}
