test/files/neg/extra-predef-no-predef/C_2.scala
object Test {
  val a: INT = 1234
  val b: Int = 5678
  println("fail")
}
